--- a/emergenciAPPS/res/layout/fragment_inicio.xml
+++ b/emergenciAPPS/res/layout/fragment_inicio.xml
@@ -15,8 +15,9 @@
         android:orientation="horizontal"
         >
         <Button 
-            android:id="@+id/btnCarabinero"
+            android:id="@+id/btnEmergencia"
             android:layout_width="230dp"  
+           
             android:layout_height="233dp"
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
@@ -45,6 +46,7 @@
             android:id="@+id/btnCarabinero"
             android:layout_width="match_parent"  
             android:layout_height="100dp"
+            android:onClick="llamar"
             android:paddingLeft="3dp"
 		    android:layout_alignParentTop="true"
 		    android:background="@drawable/carabinero"
@@ -83,6 +85,7 @@
             android:id="@+id/btnBombero"
             android:layout_width="match_parent"  
 		    android:layout_height="100dp"
+		    android:onClick="llamar"
 		   	android:layout_centerVertical="true"
 		    android:background="@drawable/bombero"
 		    
@@ -120,7 +123,8 @@
          >
             <Button 
             android:id="@+id/btnHospital"
-            android:layout_width="match_parent"  
+            android:layout_width="match_parent" 
+            android:onClick="llamar" 
 		    android:layout_height="100dp"
 		    android:layout_alignParentTop="true"
 		    android:background="@drawable/hospital"
