--- a/emergenciAPPS/res/layout/fragment_inicio.xml
+++ b/emergenciAPPS/res/layout/fragment_inicio.xml
@@ -15,8 +15,9 @@
         android:orientation="horizontal"
         >
         <Button 
-            android:id="@+id/btnCarabinero"
+            android:id="@+id/btnEmergencia"
             android:layout_width="230dp"  
+           
             android:layout_height="233dp"
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
@@ -45,6 +46,7 @@
             android:id="@+id/btnCarabinero"
             android:layout_width="match_parent"  
             android:layout_height="100dp"
+            android:onClick="llamar"
             android:paddingLeft="3dp"
 		    android:layout_alignParentTop="true"
 		    android:background="@drawable/carabinero"
@@ -75,7 +77,7 @@
 	        android:id="@+id/conten2_2"
 	        android:layout_width="100dp"
 	        android:layout_height="match_parent"
-	        
+
 	        android:layout_centerHorizontal="true"
 	        android:orientation="vertical"
          >
@@ -83,9 +85,10 @@
             android:id="@+id/btnBombero"
             android:layout_width="match_parent"  
 		    android:layout_height="100dp"
+		    android:onClick="llamar"
 		   	android:layout_centerVertical="true"
 		    android:background="@drawable/bombero"
-		    
+
             
             />
          <ImageView
@@ -114,17 +117,18 @@
 	        android:paddingRight="5dp"
 	        android:layout_width="105dp"
 	        android:layout_height="match_parent"
-	       
+
 	        android:layout_alignParentRight="true"
 	        android:orientation="vertical"
          >
             <Button 
             android:id="@+id/btnHospital"
-            android:layout_width="match_parent"  
+            android:layout_width="match_parent" 
+            android:onClick="llamar" 
 		    android:layout_height="100dp"
 		    android:layout_alignParentTop="true"
 		    android:background="@drawable/hospital"
-		    
+
             
             />
             <ImageView
