se agrega mapa en hospital

--- a/emergenciAPPS/res/layout/fragment_hospital.xml
+++ b/emergenciAPPS/res/layout/fragment_hospital.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="#000"
     android:layout_width="match_parent"
@@ -6,24 +6,27 @@
     android:orientation="vertical" >
 
     <Button
+        android:layout_gravity="right"
         android:id="@+id/llamar131"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="90dp"
         android:background="@drawable/llamarambulancia"
          />
 	<ListView 
 	    android:id="@+id/listaNroHospital"
-		android:layout_width="match_parent">
+	    android:background="#3879CF"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content">
 	</ListView>
 	<com.mapquest.android.maps.MapView
-		    android:id="@+id/map"
-		    android:layout_width="fill_parent"
-		    android:layout_height="fill_parent"
-		    android:clickable="true"
-		    android:enabled="true"
-		    android:apiKey="Fmjtd%7Cluur2g0bnd%2C8s%3Do5-9at21r"
-		    
-		/>
+	    android:id="@+id/map"
+	    android:layout_width="fill_parent"
+	    android:layout_height="fill_parent"
+	    android:clickable="true"
+	    android:enabled="true"
+	    android:apiKey="Fmjtd%7Cluur2g0bn0%2Cb0%3Do5-9at2qu"
+	    />
+
 	
 </LinearLayout>
 
