--- a/emergenciAPPS/res/layout/fragment_hospital.xml
+++ b/emergenciAPPS/res/layout/fragment_hospital.xml
@@ -19,7 +19,7 @@
 		android:layout_height="wrap_content">
 	</ListView>
 	<com.mapquest.android.maps.MapView
-	    android:id="@+id/map"
+	    android:id="@+id/mapHospital"
 	    android:layout_width="fill_parent"
 	    android:layout_height="fill_parent"
 	    android:clickable="true"
