agrege buscar e iconos

--- a/emergenciAPPS/res/layout/fragment_inicio.xml
+++ b/emergenciAPPS/res/layout/fragment_inicio.xml
@@ -63,14 +63,14 @@
                 
             <TextView 
 				 android:id="@+id/textView2" 
-				 android:textSize="16sp"
-				 android:paddingTop="12dp"
+				 android:textSize="18sp"
+				 android:paddingTop="8dp"
 				 android:textColor="#000"
 				 android:layout_below="@+id/btnCarabinero"
 				 android:layout_toRightOf="@+id/telefono1"
 				 android:layout_width="wrap_content" 
 				 android:layout_height="wrap_content" 
-				 android:text="2225128"/>
+				 android:text="133"/>
             
         </RelativeLayout>
         <RelativeLayout
@@ -102,14 +102,14 @@
                 
             <TextView 
 				 android:id="@+id/textView3" 
-				 android:textSize="16sp"
-				 android:paddingTop="12dp"
+				 android:textSize="18sp"
+				 android:paddingTop="8dp"
 				 android:textColor="#000"
 				 android:layout_below="@+id/btnBombero"
 				 android:layout_toRightOf="@+id/telefono2"
 				 android:layout_width="wrap_content" 
 				 android:layout_height="wrap_content" 
-				 android:text="2225128"/>
+				 android:text="132"/>
             
         </RelativeLayout>
          <RelativeLayout
@@ -142,14 +142,14 @@
                 
             <TextView 
 				 android:id="@+id/textView4" 
-				 android:textSize="16sp"
-				 android:paddingTop="12dp"
+				 android:textSize="18sp"
+				 android:paddingTop="8dp"
 				 android:textColor="#000"
 				 android:layout_below="@+id/btnHospital"
 				 android:layout_toRightOf="@+id/telefono3"
 				 android:layout_width="wrap_content" 
 				 android:layout_height="wrap_content" 
-				 android:text="2225128"/>
+				 android:text="131"/>
             
         </RelativeLayout>
         
