--- a/emergenciAPPS/res/menu/main.xml
+++ b/emergenciAPPS/res/menu/main.xml
@@ -18,5 +18,6 @@
     <item android:id="@+id/action_websearch"
           android:icon="@drawable/action_search"
           android:title="@string/action_websearch"
-          android:showAsAction="ifRoom|withText" />
+          android:showAsAction="ifRoom|withText" 
+          android:actionViewClass="android.widget.SearchView"/>
 </menu>
