--- a/emergenciAPPS/res/layout/fragment_inicio.xml
+++ b/emergenciAPPS/res/layout/fragment_inicio.xml
@@ -66,6 +66,7 @@
 				 android:textSize="18sp"
 				 android:paddingTop="8dp"
 				 android:textColor="#000"
+				 android:textStyle="bold"
 				 android:layout_below="@+id/btnCarabinero"
 				 android:layout_toRightOf="@+id/telefono1"
 				 android:layout_width="wrap_content" 
@@ -105,6 +106,7 @@
 				 android:textSize="18sp"
 				 android:paddingTop="8dp"
 				 android:textColor="#000"
+				 android:textStyle="bold"
 				 android:layout_below="@+id/btnBombero"
 				 android:layout_toRightOf="@+id/telefono2"
 				 android:layout_width="wrap_content" 
@@ -145,6 +147,7 @@
 				 android:textSize="18sp"
 				 android:paddingTop="8dp"
 				 android:textColor="#000"
+				 android:textStyle="bold"
 				 android:layout_below="@+id/btnHospital"
 				 android:layout_toRightOf="@+id/telefono3"
 				 android:layout_width="wrap_content" 
