se modifica error

--- a/emergenciAPPS/res/layout/fragment_carabinero.xml
+++ b/emergenciAPPS/res/layout/fragment_carabinero.xml
@@ -14,9 +14,9 @@
          />
 	<ListView 
 	    android:id="@+id/listaNroCarabinero"
-	    android:background="#3879CF"
+	    android:background="#3e5d24"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
+		android:layout_height="100dp">
 	</ListView>
 	<com.mapquest.android.maps.MapView
 	    android:id="@+id/mapCarabinero"
