--- a/emergenciAPPS/res/layout/fragment_bombero.xml
+++ b/emergenciAPPS/res/layout/fragment_bombero.xml
@@ -7,10 +7,10 @@
 
     <Button
         android:layout_gravity="right"
-        android:id="@+id/llamar131"
+        android:id="@+id/llamar132"
         android:layout_width="300dp"
         android:layout_height="90dp"
-        android:background="@drawable/llamarcarabinero" />
+        android:background="@drawable/llamarbombero" />
     
     <ScrollView 
 	    android:id="@+id/scroll"
@@ -21,7 +21,7 @@
 		        android:id="@+id/relative"
 			    android:layout_width="fill_parent"
 			    android:layout_height="wrap_content"
-			    android:background="#3e5d24" >
+			    android:background="#961717" >
 			    
 		    	<RelativeLayout 
 			        android:id="@+id/relative1"
@@ -34,7 +34,7 @@
 				        android:layout_height="80dp"
 				        android:layout_alignParentLeft="true"
 				        android:layout_alignParentTop="true"
-				        android:textColor="#6AC62D"
+				        android:textColor="#F0742C"
 				        android:layout_marginTop="10dp"
 				        android:layout_marginLeft="17dp"
 				        android:text="@string/numeroCabecera" />
@@ -46,14 +46,14 @@
 				        android:layout_alignParentTop="true"
 				        android:layout_centerHorizontal="true"
 				        android:layout_marginTop="10dp"
-				        android:textColor="#6AC62D"
+				        android:textColor="#F0742C"
 				        android:text="@string/direccionCabecera" />
 				    
 			    </RelativeLayout>
 			    
 			    <View
 		            android:id="@+id/separador"
-		            android:background="@drawable/separador_lista_carabineros"
+		            android:background="@drawable/separador_lista_bombero"
 					android:layout_below="@+id/relative1"
 					android:layout_width="wrap_content"
 					android:layout_height="2dp">
@@ -87,7 +87,7 @@
     
     
 	<com.mapquest.android.maps.MapView
-	    android:id="@+id/mapCarabinero"
+	    android:id="@+id/mapBombero"
 	    android:layout_width="fill_parent"
 	    android:layout_height="fill_parent"
 	    android:clickable="true"
@@ -97,4 +97,3 @@
 
 	
 </LinearLayout>
-
