--- a/emergenciAPPS/res/layout/fragment_carabinero.xml
+++ b/emergenciAPPS/res/layout/fragment_carabinero.xml
@@ -15,7 +15,7 @@
     <ScrollView 
 	    android:id="@+id/scroll"
 	    android:layout_width="match_parent" 
-	    android:layout_height="match_parent">
+	    android:layout_height="100dp">
 	    
 		    <RelativeLayout 
 		        android:id="@+id/relative"
