--- a/emergenciAPPS/res/layout/fragment_pdi.xml
+++ b/emergenciAPPS/res/layout/fragment_pdi.xml
@@ -20,7 +20,7 @@
 		    <RelativeLayout 
 		        android:id="@+id/relative"
 			    android:layout_width="fill_parent"
-			    android:layout_height="wrap_content"
+			    android:layout_height="100dp"
 			    android:background="#38276F" >
 			    
 		    	<RelativeLayout 
