--- a/emergenciAPPS/res/layout/fragment_carabinero.xml
+++ b/emergenciAPPS/res/layout/fragment_carabinero.xml
@@ -12,11 +12,7 @@
         android:layout_height="90dp"
         android:background="@drawable/llamarcarabinero" />
     
-    <ScrollView 
-	    android:id="@+id/scroll"
-	    android:layout_width="match_parent" 
-	    android:layout_height="100dp">
-	    
+
 		    <RelativeLayout 
 		        android:id="@+id/relative"
 			    android:layout_width="fill_parent"
@@ -58,25 +54,17 @@
 					android:layout_width="wrap_content"
 					android:layout_height="2dp">
 				</View>
-			    
-			    <RelativeLayout 
-			        android:id="@+id/relative2"
-			        android:layout_below="@+id/separador"
-				    android:layout_width="fill_parent"
-				    android:layout_height="fill_parent" >
-				    
-				    <ListView 
-					    android:id="@+id/listaNroCarabinero"
-					    android:layout_width="match_parent"
-						android:layout_height="100dp">
-					</ListView>
-					
-				</RelativeLayout>  
+
+
 				
 			 </RelativeLayout>
 			
-		</ScrollView>
-	
+		 <ListView 
+					    android:id="@+id/listaNroCarabinero"
+					    android:background="#3e5d24"
+					    android:layout_width="match_parent"
+						android:layout_height="100dp">
+					</ListView>
     
     
     
