--- a/emergenciAPPS/res/layout/fragment_hospital.xml
+++ b/emergenciAPPS/res/layout/fragment_hospital.xml
@@ -66,7 +66,7 @@
 				    android:layout_height="fill_parent" >
 				    
 				    <ListView 
-					    android:id="@+id/listaNroCarabinero"
+					    android:id="@+id/listaNroHospital"
 					    android:layout_width="match_parent"
 						android:layout_height="100dp">
 					</ListView>
