--- a/emergenciAPPS/res/layout/fragment_carabinero.xml
+++ b/emergenciAPPS/res/layout/fragment_carabinero.xml
@@ -32,7 +32,7 @@
 				        android:layout_alignParentTop="true"
 				        android:textColor="#6AC62D"
 				        android:layout_marginTop="10dp"
-				        android:layout_marginLeft="17dp"
+				        android:layout_marginLeft="12dp"
 				        android:text="@string/numeroCabecera" />
 				        
 				    <TextView
@@ -44,6 +44,17 @@
 				        android:layout_marginTop="10dp"
 				        android:textColor="#6AC62D"
 				        android:text="@string/direccionCabecera" />
+				    
+				    <TextView
+				        android:id="@+id/llamar"
+				        android:layout_width="wrap_content"
+				        android:layout_height="80dp"
+				        android:layout_alignParentTop="true"
+				        android:layout_alignParentRight="true"
+				        android:layout_marginTop="10dp"
+				        android:layout_marginRight="12dp"
+				        android:textColor="#6AC62D"
+				        android:text="@string/llamarCabecera" />
 				    
 			    </RelativeLayout>
 			    
