modifique boton mensaje

--- a/emergenciAPPS/res/layout/fragment_inicio.xml
+++ b/emergenciAPPS/res/layout/fragment_inicio.xml
@@ -20,7 +20,7 @@
             android:layout_height="240dp"
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
-		    android:background="@drawable/ayuda"
+		    android:background="@drawable/botonayudapulsado"
 		    android:onClick="enviarAlerta"
 		    />
         
