--- a/emergenciAPPS/res/layout/config.xml
+++ b/emergenciAPPS/res/layout/config.xml
@@ -118,7 +118,7 @@
 	        android:textSize="20sp"
 	        android:layout_below="@+id/separador1"
 	        android:layout_height="wrap_content"
-	        android:text="@string/contactoFavorito"
+	        android:text="@string/correoFavorito"
 	        android:textColor="#FFF"
          />
 		<EditText
@@ -128,7 +128,7 @@
            android:layout_height="30dp"
            android:layout_below="@+id/textView5"
            android:background="#ffffff"
-           android:inputType="number"
+           android:inputType="textEmailAddress"
          >
         </EditText>
         <TextView
@@ -145,9 +145,11 @@
         <EditText
            android:id="@+id/editText5"
            android:layout_centerHorizontal="true"
+           android:layout_height="60dp"
+           android:scrollbars="vertical"
            android:layout_width="300dp"
-           android:layout_height="100dp"
            android:maxLength="50"
+           android:lines="5"
            android:layout_below="@+id/textView6"
            android:background="#ffffff"
            android:inputType="text"
@@ -162,12 +164,99 @@
 			android:layout_width="wrap_content"
 			android:layout_height="1dp">
 		</View>
+		<TextView
+	        android:id="@+id/textView7"
+	        android:paddingLeft="10dp"
+	        android:paddingTop="10dp"
+	        android:layout_width="wrap_content"
+	        android:textSize="20sp"
+	        android:layout_below="@+id/separador2"
+	        android:layout_height="wrap_content"
+	        android:text="@string/radioCobertura"
+	        android:textColor="#FFF"
+         />
+		<SeekBar
+            android:id="@+id/volume_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:progress="0"
+            android:max="100"
+            android:layout_below="@+id/textView7"
+             android:progressDrawable="@drawable/progressbar"
+            android:secondaryProgress="0" />
+		<LinearLayout
+            android:layout_width="fill_parent"
+            android:id="@+id/numerosProgreso"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_below="@+id/volume_bar"
+            android:orientation="horizontal"
+            android:visibility="visible"
+            android:weightSum="15" >
+ 
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:gravity="center_horizontal"
+                android:text="0"
+                android:textColor="@android:color/white"
+                android:textStyle="bold" />
+ 
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:gravity="center_horizontal"
+                android:text="5"
+                android:textColor="@android:color/white"
+                android:textStyle="bold" />
+ 
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:gravity="center_horizontal"
+                android:text="10"
+                android:textColor="@android:color/white"
+                android:textStyle="bold" />
+ 
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:gravity="center_horizontal"
+                android:text="15"
+                android:textColor="@android:color/white"
+                android:textStyle="bold" />
+ 
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:gravity="center_horizontal"
+                android:text="20"
+                android:textColor="@android:color/white"
+                android:textStyle="bold" />
+ 
+            
+        </LinearLayout>
+		<View
+            android:id="@+id/separador3"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+			android:background="@drawable/separador"
+			android:layout_below="@+id/numerosProgreso"
+			android:layout_width="wrap_content"
+			android:layout_height="1dp">
+		</View>
 
         <Button
             android:id="@+id/btnGuardar"
             android:layout_width="120dp" 
             android:layout_height="wrap_content"
-            android:layout_below="@+id/separador2"
+            android:layout_below="@+id/separador3"
             android:layout_centerHorizontal="true"
             android:background="@drawable/boton"
             android:drawableRight="@drawable/guardar"
