--- a/emergenciAPPS/res/layout/config.xml
+++ b/emergenciAPPS/res/layout/config.xml
@@ -8,7 +8,7 @@
     android:id="@+id/scroll"
     
     > 
-<RelativeLayout 
+	<RelativeLayout 
     
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -20,14 +20,14 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/config"
+        android:text="@string/favoritos"
         android:layout_centerHorizontal="true"
         android:textColor="#FFF"
         android:textAppearance="?android:attr/textAppearanceLarge" />
        <View
             android:id="@+id/separador0"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="5dp"
 			android:background="@drawable/separador"
 			android:layout_below="@+id/textView1"
 			android:layout_width="wrap_content"
@@ -37,10 +37,10 @@
        <TextView
         android:id="@+id/textView2"
         android:textColor="#FFF"
-        android:paddingTop="15dp"
-        android:paddingLeft="10dp"
+        android:paddingTop="10dp"
+        android:paddingLeft="5dp"
         android:layout_width="wrap_content"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:layout_below="@+id/separador0"
         android:layout_height="wrap_content"
         android:text="@string/numeroBombero"
@@ -51,19 +51,19 @@
            android:id="@+id/editText1"
            android:layout_centerHorizontal="true"
            android:layout_width="300dp"
-           android:layout_height="30dp"
+           android:layout_height="25dp"
            android:layout_below="@+id/textView2"
-           android:background="#ffffff"
+           android:background="@drawable/editredondos"
            android:inputType="number"
          >
         </EditText>
         
         <TextView
 	        android:id="@+id/textView3"
-	        android:paddingTop="15dp"
+	        android:paddingTop="10dp"
 	        android:paddingLeft="10dp"
 	        android:layout_width="wrap_content"
-	        android:textSize="20sp"
+	        android:textSize="18sp"
 	        android:layout_below="@+id/editText1"
 	        android:layout_height="wrap_content"
 	        android:text="@string/numeroCarabinero"
@@ -73,9 +73,9 @@
            android:id="@+id/editText2"
            android:layout_centerHorizontal="true"
            android:layout_width="300dp"
-           android:layout_height="30dp"
+           android:layout_height="25dp"
            android:layout_below="@+id/textView3"
-           android:background="#ffffff"
+           android:background="@drawable/editredondos"
            android:inputType="number"
          >
         </EditText>
@@ -83,9 +83,9 @@
         <TextView
 	        android:id="@+id/textView4"
 	        android:paddingLeft="10dp"
-	        android:paddingTop="15dp"
+	        android:paddingTop="10dp"
 	        android:layout_width="wrap_content"
-	        android:textSize="20sp"
+	        android:textSize="18sp"
 	        android:layout_below="@+id/editText2"
 	        android:layout_height="wrap_content"
 	        android:text="@string/numeroHospital"
@@ -95,28 +95,82 @@
            android:id="@+id/editText3"
            android:layout_centerHorizontal="true"
            android:layout_width="300dp"
-           android:layout_height="30dp"
+           android:layout_height="25dp"
            android:layout_below="@+id/textView4"
-           android:background="#ffffff"
+           android:background="@drawable/editredondos"
            android:inputType="number"
          >
         </EditText>
+        
+         <TextView
+        android:id="@+id/textView100"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/datos"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/editText3"
+        android:textColor="#FFF"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+         
         <View
             android:id="@+id/separador1"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="5dp"
 			android:background="@drawable/separador"
-			android:layout_below="@+id/editText3"
+			android:layout_below="@+id/textView100"
 			android:layout_width="wrap_content"
 			android:layout_height="1dp">
 		</View>
 		<TextView
+	        android:id="@+id/textView50"
+	        android:paddingLeft="10dp"
+	       	android:paddingTop="5dp"
+	        android:layout_width="wrap_content"
+	        android:textSize="18sp"
+	        android:layout_below="@+id/separador1"
+	        android:layout_height="wrap_content"
+	        android:text="@string/nombreUser"
+	        android:textColor="#FFF"
+         />
+		<EditText
+           android:id="@+id/editText40"
+           android:layout_centerHorizontal="true"
+           android:layout_width="300dp"
+           android:layout_height="25dp"
+           android:layout_below="@+id/textView50"
+           android:background="@drawable/editredondos"
+           android:inputType="number"
+         >
+         </EditText>
+         <TextView
+	        android:id="@+id/textView60"
+	        android:paddingLeft="10dp"
+	        android:paddingTop="10dp"
+	        android:layout_width="wrap_content"
+	        android:textSize="18sp"
+	        android:layout_below="@+id/editText40"
+	        android:layout_height="wrap_content"
+	        android:text="@string/fonoUser"
+	        android:textColor="#FFF"
+         />
+		<EditText
+           android:id="@+id/editText50"
+           android:layout_centerHorizontal="true"
+           android:layout_width="300dp"
+           android:layout_height="25dp"
+           android:layout_below="@+id/textView60"
+           android:background="@drawable/editredondos"
+           android:inputType="number"
+         >
+        </EditText>
+		<TextView
 	        android:id="@+id/textView5"
 	        android:paddingLeft="10dp"
-	       
+	        android:paddingTop="10dp"
 	        android:layout_width="wrap_content"
-	        android:textSize="20sp"
-	        android:layout_below="@+id/separador1"
+	        android:textSize="18sp"
+	        android:layout_below="@+id/editText50"
 	        android:layout_height="wrap_content"
 	        android:text="@string/correoFavorito"
 	        android:textColor="#FFF"
@@ -125,18 +179,18 @@
            android:id="@+id/editText4"
            android:layout_centerHorizontal="true"
            android:layout_width="300dp"
-           android:layout_height="30dp"
+           android:layout_height="25dp"
            android:layout_below="@+id/textView5"
-           android:background="#ffffff"
-           android:inputType="textEmailAddress"
-         >
+           android:background="@drawable/editredondos"
+           android:inputType="textEmailAddress" >
+
         </EditText>
         <TextView
 	        android:id="@+id/textView6"
 	        android:paddingLeft="10dp"
 	        android:paddingTop="10dp"
 	        android:layout_width="wrap_content"
-	        android:textSize="20sp"
+	        android:textSize="18sp"
 	        android:layout_below="@+id/editText4"
 	        android:layout_height="wrap_content"
 	        android:text="@string/mensajeAlerta"
@@ -151,10 +205,12 @@
            android:maxLength="50"
            android:lines="5"
            android:layout_below="@+id/textView6"
-           android:background="#ffffff"
+           android:background="@drawable/editredondos"
            android:inputType="text"
          >
         </EditText>
+        
+       
         <View
             android:id="@+id/separador2"
             android:layout_marginTop="10dp"
@@ -258,9 +314,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/separador3"
             android:layout_centerHorizontal="true"
-            android:background="@drawable/boton"
-            android:drawableRight="@drawable/guardar"
+            android:background="@drawable/botonbotonpulsado"
+            android:padding="5dp"
+            android:drawableRight="@drawable/botonguardarpulsado"
             android:text="@string/guardar" />
 
-</RelativeLayout>
+	</RelativeLayout>
 </ScrollView>
