arreglando el configurar

--- a/emergenciAPPS/res/layout/config.xml
+++ b/emergenciAPPS/res/layout/config.xml
@@ -140,7 +140,7 @@
            android:layout_height="25dp"
            android:layout_below="@+id/textView50"
            android:background="@drawable/editredondos"
-           android:inputType="number"
+           android:inputType="text"
          >
          </EditText>
          <TextView
