--- a/emergenciAPPS/res/layout/fragment_bombero.xml
+++ b/emergenciAPPS/res/layout/fragment_bombero.xml
@@ -12,10 +12,7 @@
         android:layout_height="90dp"
         android:background="@drawable/botonllamarbombero" />
     
-    <ScrollView 
-	    android:id="@+id/scrollb"
-	    android:layout_width="match_parent" 
-	    android:layout_height="100dp">
+    
 	    
 		    <RelativeLayout 
 		        android:id="@+id/relative_b"
@@ -70,23 +67,19 @@
 					android:layout_height="2dp">
 				</View>
 			    
-			    <RelativeLayout 
-			        android:id="@+id/relative2"
-			        android:layout_below="@+id/separador"
-				    android:layout_width="fill_parent"
-				    android:layout_height="fill_parent" >
+			   </RelativeLayout>
 				    
 				    <ListView 
 					    android:id="@+id/listaNroBombero"
 					    android:layout_width="match_parent"
+					    android:background="#961717"
 						android:layout_height="100dp">
 					</ListView>
-					
-				</RelativeLayout>  
 				
-			 </RelativeLayout>
+				
+			 
 			
-		</ScrollView>
+	
 	
     
     
