--- a/emergenciAPPS/res/layout/fragment_pdi.xml
+++ b/emergenciAPPS/res/layout/fragment_pdi.xml
@@ -16,7 +16,7 @@
 		    <RelativeLayout 
 		        android:id="@+id/relative"
 			    android:layout_width="fill_parent"
-			    android:layout_height="100dp"
+			    android:layout_height="wrap_content"
 			    android:background="#1142BD" >
 			    
 		    	<RelativeLayout 
@@ -67,15 +67,15 @@
 				</View>
 			    
 
-				    
+				   </RelativeLayout> 
 				    <ListView 
 					    android:id="@+id/listaNroPdi"
 					    android:layout_width="match_parent"
+					    android:background="#1142BD"
 						android:layout_height="100dp">
 					</ListView>
 					 
 				
-			 </RelativeLayout>
 
 	
     
