--- a/emergenciAPPS/res/layout/lista_telefonos.xml
+++ b/emergenciAPPS/res/layout/lista_telefonos.xml
@@ -15,13 +15,22 @@
         android:layout_marginLeft="17dp" />
         
     <TextView
-        android:id="@+id/direccion"
+        android:id="@+id/nombre"
         android:textColor="#FFF"
         android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:layout_margin="5dp"
+        android:layout_height="20dp"
+        android:textSize="12sp"
+        android:layout_marginTop="5dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+    <TextView
+        android:id="@+id/direccion"
+        android:layout_below="@id/nombre"
+        android:layout_centerHorizontal="true"
+        android:textColor="#FFF"
+        android:textSize="10sp"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp" />
     
     <Button
         android:id="@+id/lista_boton_llamar"
