--- a/emergenciAPPS/res/menu/main.xml
+++ b/emergenciAPPS/res/menu/main.xml
@@ -15,5 +15,9 @@
   -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+	<item android:id="@+id/buscar"
+          android:icon="@drawable/action_search"
+          android:title="@string/action_websearch"
+          android:showAsAction="ifRoom|withText" 
+          android:actionViewClass="android.widget.SearchView"/>
 </menu>
