--- a/emergenciAPPS/res/layout/annotation.xml
+++ b/emergenciAPPS/res/layout/annotation.xml
@@ -6,21 +6,28 @@
  		    android:orientation="horizontal"
  		    android:layout_width="200dp" 
  	        android:layout_height="50dp"
+ 	        
  	       
  	      
  	        >
  	    	<TextView 
 			 android:id="@+id/title" 
 			 android:textSize="15sp"
+			 android:textColor="#FFF"
 			 android:layout_width="wrap_content" 
 			 android:layout_height="wrap_content" 
+			 android:paddingLeft="10dp"
+			 android:paddingRight="10dp"
 			 
 			 />
  	    	<TextView 
 			 android:id="@+id/snippet" 
 			 android:textSize="12sp"
+			 android:textColor="#FFF"
 			 android:layout_width="wrap_content" 
 			 android:layout_height="wrap_content" 
+			 android:paddingLeft="10dp"
+			 android:paddingRight="10dp"
 			 android:layout_below="@+id/title"
 			 />
  	    	<Button 
@@ -28,7 +35,8 @@
 		        android:layout_centerVertical="true"
 		        android:layout_width="50dp" 
 		        android:layout_height="wrap_content" 
-		        android:layout_alignParentRight="true"
+		        android:layout_toRightOf="@+id/snippet"
+		        
 		        android:text="IR"/>
 		        />
  	    
