--- a/emergenciAPPS/res/layout/annotation.xml
+++ b/emergenciAPPS/res/layout/annotation.xml
@@ -36,7 +36,7 @@
 		        android:layout_width="50dp" 
 		        android:layout_height="wrap_content" 
 		        android:layout_toRightOf="@+id/snippet"
-		        
+		        android:background="@drawable/boton_Ir"
 		        android:text="IR"/>
 		        />
  	    
