--- a/emergenciAPPS/res/layout/annotation.xml
+++ b/emergenciAPPS/res/layout/annotation.xml
@@ -6,7 +6,6 @@
  		    android:orientation="horizontal"
  		    android:layout_width="200dp" 
  	        android:layout_height="50dp"
- 	        
  	       
  	      
  	        >
@@ -16,8 +15,8 @@
 			 android:textColor="#FFF"
 			 android:layout_width="wrap_content" 
 			 android:layout_height="wrap_content" 
-			 android:paddingLeft="10dp"
-			 android:paddingRight="10dp"
+			 android:paddingLeft="5dp"
+			 android:paddingRight="5dp"
 			 
 			 />
  	    	<TextView 
@@ -26,17 +25,16 @@
 			 android:textColor="#FFF"
 			 android:layout_width="wrap_content" 
 			 android:layout_height="wrap_content" 
-			 android:paddingLeft="10dp"
-			 android:paddingRight="10dp"
+			 android:paddingLeft="5dp"
+			 android:paddingRight="5dp"
 			 android:layout_below="@+id/title"
 			 />
  	    	<Button 
 		        android:id="@+id/boton"
 		        android:layout_centerVertical="true"
-		        android:layout_width="30dp" 
-		        android:layout_height="30dp" 
+		        android:layout_width="50dp" 
+		        android:layout_height="wrap_content" 
 		        android:layout_toRightOf="@+id/snippet"
-		        android:background="@drawable/boton_Ir"
 		        android:text="IR"/>
 		        />
  	    
