--- a/emergenciAPPS/res/layout/configuracion.xml
+++ b/emergenciAPPS/res/layout/configuracion.xml
@@ -140,6 +140,72 @@
            android:inputType="number"
          >
         </EditText>
+        
+		 <TextView
+	        android:id="@+id/textView4"
+	        android:paddingTop="10dp"
+	        android:layout_width="wrap_content"
+	        android:textSize="20sp"
+	        android:layout_below="@+id/editTextNumeroCentroMedico"
+	        android:layout_height="wrap_content"
+	        android:text="@string/numeroCarabinero"
+	        android:textColor="#FFF"
+         />
+		 
+		 <EditText
+           android:id="@+id/editTextNumeroCarabinero"
+           android:layout_centerHorizontal="true"
+           android:layout_width="300dp"
+           android:layout_height="25dp"
+           android:layout_below="@+id/textView4"
+           android:background="@drawable/editredondos"
+           android:inputType="number"
+         >
+        </EditText>
+        
+		<TextView
+	        android:id="@+id/textView5"
+	        android:paddingTop="10dp"
+	        android:layout_width="wrap_content"
+	        android:textSize="20sp"
+	        android:layout_below="@+id/editTextNumeroCarabinero"
+	        android:layout_height="wrap_content"
+	        android:text="@string/numeroBombero"
+	        android:textColor="#FFF"
+         />
+		 
+		 <EditText
+           android:id="@+id/editTextNumeroBombero"
+           android:layout_centerHorizontal="true"
+           android:layout_width="300dp"
+           android:layout_height="25dp"
+           android:layout_below="@+id/textView5"
+           android:background="@drawable/editredondos"
+           android:inputType="number"
+         >
+        </EditText>
+        
+		<TextView
+	        android:id="@+id/textView6"
+	        android:paddingTop="10dp"
+	        android:layout_width="wrap_content"
+	        android:textSize="20sp"
+	        android:layout_below="@+id/editTextNumeroBombero"
+	        android:layout_height="wrap_content"
+	        android:text="@string/numeroPDI"
+	        android:textColor="#FFF"
+         />
+		 
+		 <EditText
+           android:id="@+id/editTextNumeroPDI"
+           android:layout_centerHorizontal="true"
+           android:layout_width="300dp"
+           android:layout_height="25dp"
+           android:layout_below="@+id/textView6"
+           android:background="@drawable/editredondos"
+           android:inputType="number"
+         >
+        </EditText>
 		 
 		 
 		 
