--- a/emergenciAPPS/res/layout/configuracion.xml
+++ b/emergenciAPPS/res/layout/configuracion.xml
@@ -1,219 +1,122 @@
+<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#000"
+    android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/boton_contactos"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:text="Contactos"
+            android:drawableRight="@drawable/ic_action_navigation_next_item"
+            android:background="#000"
+            android:gravity="fill_vertical"
+            android:paddingLeft="16dp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#FFF" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/boton_contactos"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/mensajeAlerta"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#FFF" />
+
+    <SeekBar
+        android:id="@+id/seekBar1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/textView1"
+        android:max="100"
+        android:progress="30" />
+
+    <TextView
+        android:id="@+id/TextView02"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/TextView01"
+        android:layout_below="@+id/editCentroMedico"
+        android:text="@string/numeroBombero"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#FFF" />
+
+    <EditText
+        android:id="@+id/editCentroMedico"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/TextView01"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:inputType="phone" />
+
+    <EditText
+        android:id="@+id/editBombero"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editCentroMedico"
+        android:layout_below="@+id/TextView02"
+        android:ems="10"
+        android:inputType="phone" />
+
+    <TextView
+        android:id="@+id/TextView04"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/TextView02"
+        android:layout_below="@+id/editBombero"
+        android:text="@string/numeroCarabinero"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#FFF" />
+
+    <EditText
+        android:id="@+id/editCarabinero"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/TextView04"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:inputType="phone" />
+
+    <EditText
+        android:id="@+id/editMensajeAlerta"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editCentroMedico"
+        android:layout_below="@+id/textView2"
+        android:ems="10"
+        android:inputType="textMultiLine" />
+
+    <TextView
+        android:id="@+id/TextView01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_centerVertical="true"
+        android:text="@string/numeroHospital"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#FFF" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_below="@+id/editMensajeAlerta"
+        android:layout_marginTop="16dp"
+        android:text="@string/radioCobertura"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#FFF" />
 
     
-	<RelativeLayout
-	    xmlns:tools="http://schemas.android.com/tools"
-	    xmlns:android="http://schemas.android.com/apk/res/android"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    android:orientation="horizontal" 
-	    android:background="#000"
-	    >
 
-		<ListView
-		    android:id="@+id/listView1"
-		    android:layout_width="match_parent"
-		    android:layout_height="50dp"
-		    
-		>
-		</ListView>
-		
-		 <TextView
-		     android:id="@+id/textView1"
-		     android:layout_width="match_parent"
-		     android:layout_height="25dp"
-		     android:textSize="20sp"
-		     android:layout_below="@+id/listView1"
-		     android:layout_centerHorizontal="true"
-		     android:text="@string/mensajeAlerta"
-		     android:textColor="#FFF"
-		 />
-		 
-		 <EditText
-	           android:id="@+id/editText2"
-	           android:layout_centerHorizontal="true"
-	           android:layout_width="300dp"
-	           android:layout_height="50dp"
-	           android:layout_below="@+id/textView1"
-	           android:background="@drawable/editredondos"
-	           android:inputType="text"
-         >
-         </EditText>
-         
-		 <TextView
-	        android:id="@+id/textView2"
-	        android:paddingTop="10dp"
-	        android:layout_width="wrap_content"
-	        android:textSize="20sp"
-	        android:layout_below="@+id/editText2"
-	        android:layout_height="wrap_content"
-	        android:text="@string/radioCobertura"
-	        android:textColor="#FFF"
-         />
-		 
-		 <SeekBar
-            android:id="@+id/volume_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:progress="0"
-            android:max="100"
-            android:layout_below="@+id/editText2"
-            android:progressDrawable="@drawable/progressbar"
-            android:secondaryProgress="0" 
-         />
-		 
-		 <LinearLayout
-            android:layout_width="fill_parent"
-            android:id="@+id/numerosProgreso"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_below="@+id/volume_bar"
-            android:orientation="horizontal"
-            android:visibility="visible"
-            android:weightSum="15" >
- 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:gravity="center_horizontal"
-                android:text="0"
-                android:textColor="@android:color/white"
-                android:textStyle="bold" />
- 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:gravity="center_horizontal"
-                android:text="5"
-                android:textColor="@android:color/white"
-                android:textStyle="bold" />
- 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:gravity="center_horizontal"
-                android:text="10"
-                android:textColor="@android:color/white"
-                android:textStyle="bold" />
- 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:gravity="center_horizontal"
-                android:text="15"
-                android:textColor="@android:color/white"
-                android:textStyle="bold" />
- 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:gravity="center_horizontal"
-                android:text="20"
-                android:textColor="@android:color/white"
-                android:textStyle="bold" />
- 
-        </LinearLayout>
-		 
-		 <TextView
-	        android:id="@+id/textView3"
-	        android:paddingTop="10dp"
-	        android:layout_width="wrap_content"
-	        android:textSize="20sp"
-	        android:layout_below="@+id/numerosProgreso"
-	        android:layout_height="wrap_content"
-	        android:text="@string/numeroHospital"
-	        android:textColor="#FFF"
-         />
-		 
-		 <EditText
-           android:id="@+id/editTextNumeroCentroMedico"
-           android:layout_centerHorizontal="true"
-           android:layout_width="300dp"
-           android:layout_height="25dp"
-           android:layout_below="@+id/textView3"
-           android:background="@drawable/editredondos"
-           android:inputType="number"
-         >
-        </EditText>
-        
-		 <TextView
-	        android:id="@+id/textView4"
-	        android:paddingTop="10dp"
-	        android:layout_width="wrap_content"
-	        android:textSize="20sp"
-	        android:layout_below="@+id/editTextNumeroCentroMedico"
-	        android:layout_height="wrap_content"
-	        android:text="@string/numeroCarabinero"
-	        android:textColor="#FFF"
-         />
-		 
-		 <EditText
-           android:id="@+id/editTextNumeroCarabinero"
-           android:layout_centerHorizontal="true"
-           android:layout_width="300dp"
-           android:layout_height="25dp"
-           android:layout_below="@+id/textView4"
-           android:background="@drawable/editredondos"
-           android:inputType="number"
-         >
-        </EditText>
-        
-		<TextView
-	        android:id="@+id/textView5"
-	        android:paddingTop="10dp"
-	        android:layout_width="wrap_content"
-	        android:textSize="20sp"
-	        android:layout_below="@+id/editTextNumeroCarabinero"
-	        android:layout_height="wrap_content"
-	        android:text="@string/numeroBombero"
-	        android:textColor="#FFF"
-         />
-		 
-		 <EditText
-           android:id="@+id/editTextNumeroBombero"
-           android:layout_centerHorizontal="true"
-           android:layout_width="300dp"
-           android:layout_height="25dp"
-           android:layout_below="@+id/textView5"
-           android:background="@drawable/editredondos"
-           android:inputType="number"
-         >
-        </EditText>
-        
-		<TextView
-	        android:id="@+id/textView6"
-	        android:paddingTop="10dp"
-	        android:layout_width="wrap_content"
-	        android:textSize="20sp"
-	        android:layout_below="@+id/editTextNumeroBombero"
-	        android:layout_height="wrap_content"
-	        android:text="@string/numeroPDI"
-	        android:textColor="#FFF"
-         />
-		 
-		 <EditText
-           android:id="@+id/editTextNumeroPDI"
-           android:layout_centerHorizontal="true"
-           android:layout_width="300dp"
-           android:layout_height="25dp"
-           android:layout_below="@+id/textView6"
-           android:background="@drawable/editredondos"
-           android:inputType="number"
-         >
-        </EditText>
-		 
-		 
-		 
-		 
-		 
-		 
-
-		 
-		
-	
-	</RelativeLayout>
+</RelativeLayout>
