--- a/emergenciAPPS/res/layout/activity_contactos.xml
+++ b/emergenciAPPS/res/layout/activity_contactos.xml
@@ -7,7 +7,7 @@
 	    android:id="@+id/listaNroContactos"
 	    android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:background="#116d97">
+		android:background="#000">
 	</ListView>
 
 </LinearLayout>
