Se ha arreglado el agragar, eliminar y actualizar contacto, lo que falta es actualizar la lista de contactos al hacer una accion descrita anteriormente

--- a/emergenciAPPS/res/layout/activity_detalle_contacto.xml
+++ b/emergenciAPPS/res/layout/activity_detalle_contacto.xml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+<ScrollView 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent" 
+    android:layout_height="match_parent"
+    tools:context="com.example.emergenciapps.EmergenciAPPSActivity"
+     
+    android:id="@+id/scroll"
+    
+    > 
+
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:background="@android:color/black" >
 
     <TextView
@@ -120,3 +131,4 @@
         android:text="@string/gps" />
 
 </RelativeLayout>
+</ScrollView>
